# operia

./: LICENSE  package.json
ai_model/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_run.py
ai_model/src/: __init__.py  agent.py  config.py  main.py  storage.py
ai_model/src/models/: __init__.py
ai_model/src/services/: __init__.py  github.py  notion.py  slack.py
ai_model/src/tools/: __init__.py  extraction.py
ai_model/tests/: __init__.py  test_agent.py
apps/api/: .env.example  NAMING_CONVENTIONS.md  package-lock.json  package.json  pnpm-lock.yaml
apps/api/src/: app.controller.ts  app.module.ts  env.ts  main.ts
apps/api/src/common/dto/: error-response.dto.ts  index.ts
apps/api/src/common/email-templates/: password-reset-otp.template.ts  verify-otp.template.ts  welcome.template.ts
apps/api/src/common/guards/: index.ts
apps/api/src/common/services/: ai-config.service.ts  ai.service.ts  cloudinary.service.ts  cookie.service.ts  email.service.ts  index.ts  tasks.service.ts
apps/api/src/common/strategies/: access-token.strategy.ts  google.strategy.ts  refresh-token.strategy.ts
apps/api/src/common/types/: ai.types.ts  index.ts
apps/api/src/constants/examples/: auth-examples.ts  index.ts  notion-examples.ts
apps/api/src/db/schema/: index.ts  integration.ts  pages.ts  tasks.ts
apps/api/src/db/seeds/: seed-data.ts
apps/api/src/modules/ai/: ai.module.ts
apps/api/src/modules/auth/: auth.module.ts
apps/api/src/modules/upload/: upload.controller.ts
apps/web/: package.json
docs/: features.md  how_to_run_ai_agent.md
(+53 files in other folders)
